Fix build with Qt < 5.8 (missing Qt::ISODateWithMs)

Add some replacement implementation.
Add autotests.

FIXED-IN:3.2.0
BUG:404599